5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1795_3135.log
== TEST (2019-05-30 16:14:24) 
-- CODE:
print("nome")
-- OUTPUT:
nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:16) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

m = ((v[i] * 0.5)/size(v))**2

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:11) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	m = sum(v[i] * 0.5)
	i = i + 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:11) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] * 0.5)
	i = i + 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:31) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	v = sum(v[i] * 0.5)
	i = i + 1

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:02) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	v = sum(v[i] ** 0.5)
	i = i + 1

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:22) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:38) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:16) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:59) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

soma = (m/size(v))**2

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

soma = (m/size(v))**2

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:45) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

soma = (m/size(v))**2

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:25) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	m = sum(v[i] ** 0.5)
	i = i + 1

soma = (m/size(v))**2

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:11) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0
m = 0
while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:15) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:34) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(sum(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:04) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(round((sum(v)/size(v))**2,2)
-- ERROR:
File "XXXX", line 14
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:12) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(round((sum(v)/size(v))**2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:32) 
-- CODE:
from numpy import*

v = array(eval(input("Digite as notas: ")))

i = 0

while( i < size(v)):
	v[i] = v[i] ** 0.5
	i = i + 1



print(round((sum(v)/size(v))**2,2))
-- EXECUTION TIME:
0.371389
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.68
---- user output:
4.68
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.59
---- user output:
3.59
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.92
---- user output:
2.92
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
